# bird-by-bird

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  fly.toml  main.py  manage.py  pyproject.toml  pytest.ini
backend/bird_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: admin.py  auth.py  bird_assignment.py  bird_images.py  email_verification.py  models.py  password_reset.py  rate_limit.py  schema.py  task_service.py  views.py
backend/core/management/commands/: seed_yesterday_task.py
backend/core/migrations/: 0001_initial.py  0002_task_bird_image_user_bird_assignment_pool.py  0003_backfill_bird_images.py  0004_email_verification.py  0005_password_reset_token.py
backend/core/tests/: test_graphql.py
frontend/: .env.local.example  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/credits/: page.tsx
frontend/app/first-bird/: page.tsx
frontend/app/flock/: page.tsx
frontend/components/: AddTaskModal.tsx  AuthCreditsFooter.tsx  AuthShell.tsx  BirdImage.tsx  CompletedTaskRow.tsx  CreditsLink.tsx  EditableTaskContent.tsx  EmailVerificationBanner.tsx  EmailVerificationGate.tsx  FlockRowText.tsx  FlockSecondaryAction.tsx  HistoryClearMenu.tsx  HistoryDownloadMenu.tsx  Providers.tsx  SquareCheckbox.tsx  ThemeProvider.tsx  ThemeToggle.tsx  ToastHost.tsx  historyActionsStyles.ts
frontend/lib/: apollo-client.ts  birds.ts  format.ts  historyExport.ts  taskCache.ts  theme.ts  types.ts
infra/: README.md
(+15 files in other folders)
